package de.dhbw.exceptions.exercises;

public class CheckedException extends Exception {

    // demonstrate code generation: "override methods from class Exception, i.e. constructors"

}